--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "nodets_pet",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.15"
+  },
   "scripts": {
+    "start": "node dist/server.js",
+    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,json,mustache src/server.ts"
   },
@@ -21,11 +26,13 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "mustache-express": "^1.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/mustache-express": "^1.2.2",
-    "@types/node": "^18.0.0"
+    "@types/node": "^18.0.0",
+    "copyfiles": "^2.4.1"
   }
 }
